--- a/servers/package.json
+++ b/servers/package.json
@@ -23,7 +23,7 @@
     "@apollo/gateway": "^2.6.2",
     "@apollo/server": "^4.9.5",
     "@apollo/subgraph": "^2.6.2",
-    "@nest-modules/mailer": "^1.3.22",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
