--- a/client/user-ui/package.json
+++ b/client/user-ui/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.17.9",
     "graphql": "^16.8.1",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
