Services - User - social next auth in progress

--- a/client/user-ui/.env
+++ b/client/user-ui/.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_SERVER_URI = "http://localhost:4001/graphql"
+DATABASE_URL = "mongodb+srv://awais:123@cluster0.kmlr0jy.mongodb.net/food_delivery"
+GOOGLE_CLIENT_ID = "808459055802-idnehalu3vb0p5vfi7b8kfn9s0uqnlve.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
