--- a/client/user-ui/package.json
+++ b/client/user-ui/package.json
@@ -12,11 +12,14 @@
     "@apollo/client": "^3.8.9",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.8.1",
     "framer-motion": "^10.17.9",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
