--- a/food-delivery-app/package.json
+++ b/food-delivery-app/package.json
@@ -54,17 +54,17 @@
   "devDependencies": {
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
-    "@nx/cypress": "17.2.8",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/nest": "17.2.8",
-    "@nx/next": "^17.2.8",
-    "@nx/node": "17.2.8",
-    "@nx/react": "17.2.8",
-    "@nx/webpack": "17.2.8",
-    "@nx/workspace": "17.2.8",
+    "@nx/cypress": "18.0.4",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/nest": "18.0.4",
+    "@nx/next": "^18.0.4",
+    "@nx/node": "18.0.4",
+    "@nx/react": "18.0.4",
+    "@nx/webpack": "18.0.4",
+    "@nx/workspace": "18.0.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
@@ -88,8 +88,9 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.4.1",
-    "nx": "17.2.8",
+    "nx": "18.0.4",
     "prettier": "^3.1.1",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.1",
