--- a/client/restaurant-dashboard/.env
+++ b/client/restaurant-dashboard/.env
@@ -1,7 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+NEXT_PUBLIC_SERVER_URI = "http://localhost:4002/graphql"
+DATABASE_URL = "mongodb+srv://awais:123@cluster0.kmlr0jy.mongodb.net/food_delivery"
+GOOGLE_CLIENT_ID = "808459055802-idnehalu3vb0p5vfi7b8kfn9s0uqnlve.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
