--- a/client/restaurant-dashboard/package.json
+++ b/client/restaurant-dashboard/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "recharts": "^2.12.0",
     "timeago.js": "^4.0.2",
     "zod": "^3.22.4"
   },
