--- a/client/restaurant-dashboard/package.json
+++ b/client/restaurant-dashboard/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.1",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.6.0",
