--- a/servers/package.json
+++ b/servers/package.json
@@ -25,21 +25,22 @@
     "@apollo/subgraph": "^2.6.2",
     "@hookform/resolvers": "^3.3.2",
     "@nestjs-modules/mailer": "^1.10.3",
-    "@nestjs/cli": "^10.3.0",
     "@nestjs/apollo": "^12.0.11",
+    "@nestjs/cli": "^10.3.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.3.0",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.11.0",
     "@types/bcrypt": "^5.0.2",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/supertest": "^2.0.16",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^2.0.3",
     "ejs": "^3.1.9",
     "eslint-plugin-prettier": "^5.1.2",
     "express": "^4.18.2",
